@@ -1,3 +1,11 @@
+Sun Feb 20 02:14:09 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
+
+	* signal.c (sig_trap): avoid pthread_sigmask(xx, &mask, &mask) usage
+	  because FreeBSD don't permit it. If it's used, it behave as
+	  pthread_sigmask(xx, NULL, &mask).
+
+	* signal.c (init_sigchld): ditto.
+
 Sat Feb 19 22:37:42 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>
 
 	* vm_insnhelper.c (vm_check_if_namespace): guard temporary object
